@@ -3205,6 +3205,12 @@ lang_size_sections_1
 		    s = s->header.next;
 		  }
 
+		/* If dot is advanced, this implies that the section should
+		   have space allocated to it, unless the user has explicitly
+		   stated that the section should never be loaded.  */
+		if (!(output_section_statement->flags & (SEC_NEVER_LOAD | SEC_ALLOC)))
+		  output_section_statement->bfd_section->flags |= SEC_ALLOC;
+
 		dot = newdot;
 	      }
 	  }
